--- a/reference.bib
+++ b/reference.bib
@@ -57,7 +57,7 @@
 	url = {http://www.sciencedirect.com/science/article/pii/S0168900206000507},
 	number = {2},
 	urldate = {2016-09-26},
-	journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+	journal = {Nuclear Instruments and Methods in Physics Research Section A},
 	author = {Spiller, P. and Franchetti, G.},
 	year = {2006},
 	pages = {305--309},
@@ -189,7 +189,7 @@
 	title = {The new {White} {Rabbit} based timing system for the {FAIR} facility},
 	url = {http://accelconf.web.cern.ch/Accelconf/pcapac2012/papers/fria01.pdf},
 	urldate = {2016-08-23},
-	journal = {Proceedings of PCaPAC2012, Kolkata, India},
+	journal = {PCaPAC},
 	author = {Beck, Dietrich and Bar, R. and Kreider, Mathias and Prados, Cesar and Rauch, Stefan and Terpstra, Wesley and Zweig, Marcus},
 	year = {2012},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\RQMPHJGC\\Beck et al. - 2012 - The new White Rabbit based timing system for the F.pdf:application/pdf}
@@ -260,6 +260,49 @@
 	year = {2007},
 	pages = {310},
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\D2NN6XIS\\Arruat et al. - 2007 - Front-end software architecture.pdf:application/pdf}
+}
+
+@article{thieme_scu_2013,
+	title = {{SCU} system goes productive},
+	url = {http://repository.gsi.de/record/68061/files/FG-CS-07.pdf},
+	urldate = {2016-09-27},
+	journal = {GSI Scientific Report},
+	author = {Thieme, Matthias and Panschow, Wolfgang and Rauch, Stefan},
+	year = {2013},
+	file = {SCU system goes productive - FG-CS-07.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\277IHK9Z\\FG-CS-07.html:text/html}
+}
+
+@article{beck_white_2011,
+	title = {White {Rabbit} {Technology} as {Basis} for the {FAIR} {Timing} {System}},
+	url = {https://www-acc.gsi.de/wiki/pub/Timing/TimingSystemDocuments/PHN-ACC-RD-45.pdf},
+	urldate = {2016-09-27},
+	journal = {GSI Scientific Report},
+	author = {Beck, D. and Bar, R. and Kreider, M. and Prados, C. and Rauch, S. and Terpstra, W. and Zweig, M. and Fleck, T.},
+	year = {2011},
+	file = {White Rabbit Technology as Basis for the FAIR Timing System - PHN-ACC-RD-45.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\TT7TI7ZF\\PHN-ACC-RD-45.html:text/html}
+}
+
+@misc{prados_testing_2016,
+	title = {Testing the {WR} {Network} of the {FAIR} {General} {Machine} {Timing} {System}},
+	publisher = {GSI CSCO internal document},
+	author = {Prados, Cesar and Bai, Jiaoni},
+	year = {2016}
+}
+
+@misc{_calculating_2012,
+	title = {Calculating {Optical} {Fiber} {Latency}},
+	url = {http://www.m2optics.com/blog/bid/70587/Calculating-Optical-Fiber-Latency},
+	year = {2012}
+}
+
+@inproceedings{tamura_synchronization_2006,
+	title = {Synchronization {System} for the {J}-{PARC} {RCS}},
+	url = {http://www.pasj.jp/web_publish/pasj3_lam31/Proceedings/W/WP64.pdf},
+	urldate = {2016-09-27},
+	booktitle = {3rd {Annual} {Meeting} of {Particle} {Accelerator} {Society} of {Japan}},
+	author = {Tamura, Fumihiko and Schnase, Alexander and Nomura, Masahiro and Yamamoto, Masanobu and Hasegawa, Katsushi},
+	year = {2006},
+	file = {WP64.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\IAUGSD7H\\WP64.html:text/html}
 }
 
 @article{klingbeil_new_2011,
@@ -346,6 +389,23 @@
 	year = {1984}
 }
 
+@article{ferrand_system_2014,
+	title = {System {Simulation} of {Bunch}-to-{Bucket} {Transfer} {Between} {Synchrotrons}},
+	url = {http://repository.gsi.de/record/184160/files/FG-GENERAL-28.pdf},
+	urldate = {2016-09-27},
+	journal = {GSI Scientific Report},
+	author = {Ferrand, T. and Bai, J.},
+	year = {2014},
+	file = {[PDF] gsi.de:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\TC5ZJI2F\\Ferrand and Bai - System Simulation of Bunch-to-Bucket Transfer Betw.pdf:application/pdf}
+}
+
+@misc{laier_funktional-spezifikation_2011,
+	title = {Funktional-{Spezifikation} {DDS}},
+	publisher = {GSI internal document},
+	author = {Laier, U.},
+	year = {2011}
+}
+
 @article{bohne_status_1986,
 	title = {Status report on the {SIS}/{ESR} project at {GSI}},
 	url = {http://inspirehep.net/record/242805/files/HEACC86_I_206-210.pdf},
@@ -353,4 +413,132 @@
 	author = {Böhne, D. and Prange, H. and Blasche, K. and Franzke, B.},
 	year = {1986},
 	file = {[PDF] inspirehep.net:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\GEEH2VAD\\Böhne et al. - 1986 - Status report on the SISESR project at GSI.pdf:application/pdf}
+}
+
+@misc{liebermann_fair_2013,
+	title = {{FAIR} and {GSI} {Reference} {Cycles} for {SIS}18},
+	publisher = {GSI internal document},
+	author = {Liebermann, H. and Ondreka, D.},
+	year = {2013}
+}
+
+@misc{liebermann_sis100_2013,
+	title = {{SIS}100 {Cycles}},
+	publisher = {GSI internal document},
+	author = {Liebermann, H. and Ondreka, D.},
+	year = {2013}
+}
+
+@article{lestinsky_cryring_2015,
+	title = {{CRYRING}@ {ESR}: present status and future research},
+	volume = {2015},
+	shorttitle = {{CRYRING}@ {ESR}},
+	url = {http://iopscience.iop.org/article/10.1088/0031-8949/2015/T166/014075/meta},
+	number = {T166},
+	urldate = {2016-09-27},
+	journal = {Physica Scripta},
+	author = {Lestinsky, M. and Bräuning-Demian, A. and Danared, H{\textbackslash}a akan and Engström, M. and Enders, W. and Fedotova, S. and Franzke, B. and Heinz, A. and Herfurth, F. and Källberg, A. and {others}},
+	year = {2015},
+	pages = {014075},
+	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\Z99D9NJB\\meta.html:text/html}
+}
+
+@article{herfurth_low_2013,
+	title = {The low energy storage ring {CRYRING}@ {ESR}},
+	url = {https://accelconf.web.cern.ch/accelconf/COOL2013/papers/thpm1ha01.pdf},
+	urldate = {2016-09-27},
+	journal = {Proc. of COOL2013 (Murren, Switzerland)},
+	author = {Herfurth, F. and Brauning-Demian, A. and Enders, W. and Danared, H. and {others}},
+	year = {2013},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\UM45NNJ4\\Herfurth et al. - 2013 - The low energy storage ring CRYRING@ ESR.pdf:application/pdf}
+}
+
+@inproceedings{steck_demonstration_2011,
+	address = {Alushta, Ukraine},
+	title = {Demonstration of {Longitudinal} {Stacking} in the {ESR} with {Barrier} {Buckets} and {Stochastic} {Cooling}},
+	url = {http://accelconf.web.cern.ch/AccelConf/COOL2011/papers/proceed.pdf#page=150},
+	urldate = {2016-09-27},
+	author = {Steck, M. and Dimopoulou, C. and Franzke, B. and Gorda, O. and Katayama, T. and Nolden, F. and Schreiber, G. and Möhl, Germany D. and Stassen, Switzerland R. and FZJ, H. Stockhorst and {others}},
+	year = {2011},
+	pages = {140},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\6T7K84FM\\Steck et al. - 2011 - Demonstration of Longitudinal Stacking in the ESR .pdf:application/pdf}
+}
+
+@inproceedings{smirnov_particle_2009,
+	title = {Particle accumulation with a barrier bucket {RF} system},
+	booktitle = {{COOL}},
+	author = {Smirnov, A. V. and Krestnikov, D. A. and Meshkov, I. N. and {others}},
+	year = {2009}
+}
+
+@inproceedings{steck_advanced_2008,
+	title = {Advanced {Design} of the {FAIR} {Storage} {Ring} {Complex}},
+	url = {https://accelconf.web.cern.ch/AccelConf/PAC2009/papers/fr1gri03.pdf},
+	urldate = {2016-09-27},
+	booktitle = {In {Proc}. of {EPAC}},
+	author = {Steck, M. and Bär, R. and Blell, U. and Dimopoulou, C. and Dolinskii, A. and Forck, P. and Franzke, B. and Gorda, O. and Gostishchev, V. and Jandewerth, U. and {others}},
+	year = {2008},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\FZKGKHD7\\Steck et al. - 2008 - Advanced Design of the FAIR Storage Ring Complex.pdf:application/pdf}
+}
+
+@inproceedings{toelle_hesr_2007,
+	title = {{HESR} at {FAIR}: {Status} of technical planning},
+	shorttitle = {{HESR} at {FAIR}},
+	url = {http://epaper.kek.jp/p07/PAPERS/TUPAN024.PDF},
+	urldate = {2016-09-27},
+	booktitle = {{PAC}07},
+	author = {Toelle, R. and Bongardt, K. and Dietrich, J. and Esser, F. and Felden, O. and Greven, R. and Hansen, G. and Klehr, F. and Lehrach, A. and Lorentz, B. and {others}},
+	year = {2007},
+	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\U6ER6T4K\\Toelle et al. - 2007 - HESR at FAIR Status of technical planning.pdf:application/pdf}
+}
+
+@article{taylor_introduction_1982,
+	title = {An introduction to error analysis: {The} study of uncertainty in physical measurements},
+	shorttitle = {An introduction to error analysis},
+	journal = {Mill Valley, CA: Anonymous University Science Books},
+	author = {Taylor, John R.},
+	year = {1982},
+	pages = {71ep}
+}
+
+@misc{_statistical_????,
+	title = {Statistical and numerical tools  in astrophysics {I}. {Accuracy} and precision},
+	url = {http://www.astro.lu.se/Education/utb/ASTM11/lecture2.pdf},
+	urldate = {2016-09-27},
+	file = {Microsoft PowerPoint - statistics1.ppt - lecture2.pdf:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\EJ4PBZ99\\lecture2.html:text/html}
+}
+
+@inproceedings{bai_bunch_2015,
+	title = {{BUNCH} {TO} {BUCKET} {TRANSFER} {SYSTEM} {FOR} {FAIR}},
+	url = {http://icalepcs.synchrotron.org.au/papers/wepgf119.pdf},
+	urldate = {2016-09-23},
+	booktitle = {{ICALEPCS}},
+	author = {Bai, J. and Ferrand, T. and Beck, D. and Bär, R. and Kester, O. and Ondreka, D. and Prados, C. and Terpstra, W.},
+	year = {2015},
+	file = {[PDF] synchrotron.org.au:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\G38R62RF\\Bai et al. - 2015 - BUNCH TO BUCKET TRANSFER SYSTEM FOR FAIR.pdf:application/pdf}
+}
+
+@inproceedings{ferrand_system_2015,
+	title = {{SYSTEM} {DESIGN} {FOR} {A} {DETERMINISTIC} {BUNCH}-{TO}-{BUCKET} {TRANSFER}},
+	url = {http://accelconf.web.cern.ch/AccelConf/IPAC2015/papers/wepma024.pdf},
+	urldate = {2016-09-27},
+	booktitle = {{IPAC}},
+	author = {Ferrand, T. and Bai, J.},
+	year = {2015},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\G2TUBWJ2\\Ferrand and Bai - SYSTEM DESIGN FOR A DETERMINISTIC BUNCH-TO-BUCKET .pdf:application/pdf}
+}
+
+@inproceedings{bai12_first_2014,
+	title = {First {Idea} on {Bunch} to {Bucket} {Transfer} for {FAIR}},
+	url = {http://epaper.kek.jp/PCaPAC2014/posters/fpo024_poster.pdf},
+	urldate = {2016-09-27},
+	author = {Bai12, J. and Bär, R. and Beck, D. and Ferrand13, T. and Kreider, M. and Ondreka, D. and Prados, C. and Rauch, S. and Terpstra, W. and Zweig, M.},
+	year = {2014},
+	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\A46CN2BZ\\Bai12 et al. - First Idea on Bunch to Bucket Transfer for FAIR.pdf:application/pdf}
+}
+
+@phdthesis{ferrand_development_????,
+	title = {Development of the {LLRF} system for a deterministic {Bunch}-to-{Bucket} transfer for {FAIR}},
+	school = {Technical University Darmstadt},
+	author = {Ferrand, Thibault}
 }
