Modification: chapter 2: two methods

--- a/main.tex
+++ b/main.tex
@@ -432,7 +432,7 @@ sort=symbollambda, type=symbolslist
 }
 
 \newglossaryentry{symb:bucket_pattern}{
-name=$t_{pattern}$ ,
+name=$t_{bucket}$ ,
 description={Time delay for a specified bucket pattern},
 sort=symbollambda, type=symbolslist
 }
@@ -848,7 +848,7 @@ description={Closeness of agreement between the average actual start of the sync
 }
 \newglossaryentry{glos:frame_loss_rate}{
 name={frame loss rate},
-description={The ratio of the number of the lost frames to the number of the theoretic received frames of a tested port}
+description={The ratio of the number of the lost Ethernet frames to the number of the theoretic received frames of a tested port}
 }
 \newglossaryentry{glos:latency}{
 name={latency},
@@ -878,7 +878,7 @@ description={B2B master: data collection, calculation and distribution for the B
 }
 \newglossaryentry{glos:B2B_t_SCU}{
 name={B2B target SCU},
-description={Collection the predicted phase of the target synchrotron and transfer it to the source synchrotron}
+description={Collects the predicted phase of the target synchrotron and transfers it to the source synchrotron}
 }
 \newglossaryentry{glos:machine_cycle}{
 name={machine cycle},
@@ -994,7 +994,7 @@ description={Range within which the fine alignment lies because of the propagati
 
 	{ \normalsize Vom Fachbereich\\
 	Institut für Angewandte Physik\\
-	der Goethe-Universit$\ddot{a}$t, Frankfurt am Main\\
+	der Goethe-Universit"at, Frankfurt am Main\\
 	zur Erlangung des akademischen Grades\\
 	eines Doktor der Naturwissenschaften\\
 	genehmigte Dissertation\par}
@@ -1002,15 +1002,15 @@ description={Range within which the fine alignment lies because of the propagati
 	%Author's name
     {\normalsize Von \par}
     \LARGE \textbf{ Jiaoni Bai}\\
-    {\normalsize geboren am 9. November 1986 in China \par}
+    {\normalsize geboren am 9. November 1986 in Taiyuan, Shanxi Province, China \par}
     \vspace{2cm}
 	\normalsize
 	% referent
 	\begin{align*}
-		 Referent:\: &Dr. D.Ondreka and Dr. D.Beck \\
-		 Korreferent:\: &Prof. Dr. O.Kester\\
-		 Tag der Einreichung:\: &\\
-		 Tag der m\ddot{u}ndlichen Pr\ddot{u}fung:\: & March, 2017\\
+		 \text{Referent: }\:  &\text{Prof. Dr. U. Ratzinger}\\
+		 \text{Korreferent: }\: &\text{Prof. Dr. O. Kester}\\
+		 \text{Tag der Einreichung: }\: &\text{Date. Month Year}\\
+		 \text{Tag der m"undlichen Pr"ufung: }\: &\text{Date. Month Year} \\
 \end{align*}
 	%Date
     \vspace{2cm}
@@ -1110,7 +1110,7 @@ I would like to dedicate this dissertation to my dear parents,\\ loving husband 
 %\input{chapters/3Firstconcept}
 \chapter{Technical basis for the B2B transfer system}
 \input{chapters/3Technical_basis}
-\chapter{Concept of the B2B transfer system for FAIR}
+\chapter{Concept of the B2B transfer system for FAIR ~\cite{bai_concept_2016}}
 \input{chapters/4Concept}
 \chapter{Application of the B2B transfer system for FAIR accelerators}
 \input{chapters/Application}
