--- a/main.tex
+++ b/main.tex
@@ -677,6 +677,10 @@ description={Heavy Ion Synchrotron - SchwerIonen Synchrotron (18 Tm magnetic rig
 name={SIS100},
 description={Heavy Ion Synchrotron - SchwerIonen Synchrotron (100 Tm magnetic rigidity)},type=abbreslist
 }
+\newglossaryentry{SIS300}{
+name={SIS300},
+description={Heavy Ion Synchrotron - SchwerIonen Synchrotron (300 Tm magnetic rigidity)},type=abbreslist
+}
 \newglossaryentry{VLAN}{
 name={VLAN},
 description={Virtual Local Area Network},type=abbreslist
