modification:technical_basis

--- a/main.tex
+++ b/main.tex
@@ -1131,6 +1131,8 @@ I would like to dedicate this dissertation to my dear parents,\\ loving husband 
 \appendix
 \chapter{B2B timing frames}
 \input{chapters/appendixA}
+\chapter{Timing frames transfer for the B2B transfer}
+\input{chapters/appendixC}
 \chapter{Parameters of B2B transfer for FAIR accelerator pairs}
 \input{chapters/appendixB}
 
