chapter 1 and 4 ok

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \usepackage{acronym}
 \usepackage{graphicx}
 \usepackage{pdfpages}
+\usepackage{graphicx,subcaption}
 
 \usepackage[numbers,sort&compress]{natbib}
 
@@ -1114,11 +1115,11 @@ I would like to dedicate this dissertation to my dear parents,\\ loving husband 
 %\input{chapters/3Firstconcept}
 \chapter{Technical basis for the B2B transfer system}
 \input{chapters/3Technical_basis}
-\chapter{Concept of the B2B transfer system for FAIR ~\cite{bai_concept_2016}}
+\chapter{Concept of the FAIR B2B transfer system ~\cite{bai_concept_2016}}
 \input{chapters/4Concept}
-\chapter{Application of the B2B transfer system for FAIR accelerators}
+\chapter{Application of the FAIR B2B transfer system for FAIR accelerators}
 \input{chapters/Application}
-\chapter{Realization and systematic investigation of the B2B transfer system for FAIR}
+\chapter{Realization and systematic investigation of the FAIR B2B transfer system}
 \input{chapters/5Realization}
 %\chapter{Existing transfer system and the transfer system of the FAIR accelerators}
 %\input{chapters/6Existing}
