--- a/reference.bib
+++ b/reference.bib
@@ -89,6 +89,59 @@
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\98CBNIEF\\2053285.html:text/html}
 }
 
+@article{abe_technical_2010,
+	title = {Technical design report {Collector} {Ring}},
+	url = {http://arxiv.org/abs/1011.0352},
+	urldate = {2016-10-27},
+	journal = {KEK Report},
+	author = {Abe, T. and Adachi, I. and Adamczyk, K. and Ahn, S. and Aihara, H. and Akai, K. and Aloi, M. and Andricek, L. and Aoki, K. and Arai, Y. and {others}},
+	year = {2010},
+	file = {[PDF] arxiv.org:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\BGA8MSA7\\Abe et al. - 2010 - Belle II technical design report.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\C3R7E9TP\\1011.html:text/html}
+}
+
+@inproceedings{toelle_hesr_2007,
+	title = {{HESR} at {FAIR}: {Status} of technical planning},
+	shorttitle = {{HESR} at {FAIR}},
+	url = {http://epaper.kek.jp/p07/PAPERS/TUPAN024.PDF},
+	urldate = {2016-10-27},
+	author = {Toelle, R. and Bongardt, K. and Dietrich, J. and Esser, F. and Felden, O. and Greven, R. and Hansen, G. and Klehr, F. and Lehrach, A. and Lorentz, B. and {others}},
+	year = {2007},
+	file = {[PDF] kek.jp:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\XDJ4BCF5\\Toelle et al. - 2007 - HESR at FAIR Status of technical planning.pdf:application/pdf}
+}
+
+@misc{__????
+}
+
+@misc{_j-parc_????,
+	title = {J-{PARC}},
+	url = {https://www.kek.jp/en/Facility/ACCL/J-PARC/}
+}
+
+@misc{_brookhaven_????,
+	title = {Brookhaven {National} {Laboratory}},
+	url = {https://en.wikipedia.org/wiki/Particle_physics}
+}
+
+@misc{_fermi_????,
+	title = {Fermi {National} {Accelerator} {Laboratory}},
+	url = {http://www.fnal.gov/pub/science/particle-accelerators/accelerator-complex.html}
+}
+
+@misc{_institute_????,
+	title = {Institute of {Modern} {Physics} of the {Chinese} {Academy} of {Sciences}},
+	url = {http://english.imp.cas.cn/au/bi/201312/t20131231_115141.html}
+}
+
+@inproceedings{man_survey_2002,
+	title = {Survey and {Alignment} of {HIRFL}-{CSR} at {IMP}},
+	url = {http://www-group.slac.stanford.edu/met/IWAA/TOC_S/PAPERS/KMan02.pdf},
+	urldate = {2016-10-28},
+	booktitle = {Proc. {IWAA}2002},
+	author = {Man, Kaidi and Guo, Yizhen and Cai, Guozhu and Yang, Sengli and Wang, Shoujin},
+	year = {2002},
+	file = {[PDF] stanford.edu:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\4NJIMFAK\\Man et al. - 2002 - Survey and Alignment of HIRFL-CSR at IMP.pdf:application/pdf}
+}
+
 @book{lee_accelerator_2011,
 	address = {Singapore},
 	edition = {3},
@@ -151,6 +204,15 @@
 	file = {[PDF] arxiv.org:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\DMNWKFA9\\Holzer - 2014 - Introduction to transverse beam dynamics.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\ZWPIH59A\\1404.html:text/html}
 }
 
+@techreport{werkema_differential_2001,
+	title = {Differential {Relationships} {Between} {Momentum} {Magnetic} {Field}, {Orbit} {Length}, and {Revolution} {Frequency}},
+	url = {http://www.osti.gov/scitech/biblio/984579},
+	urldate = {2016-10-20},
+	institution = {Fermi National Accelerator Laboratory (FNAL), Batavia, IL},
+	author = {Werkema, Steve},
+	year = {2001}
+}
+
 @article{spiller_fair_2006-1,
 	title = {The {FAIR} accelerator project at {GSI}},
 	volume = {561},
@@ -183,6 +245,27 @@
 	year = {2005},
 	pages = {S967},
 	file = {Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\K9VT3T4D\\meta.html:text/html}
+}
+
+@article{nolden_collector_2006,
+	title = {The {Collector} {Ring} {CR} of the {FAIR} project},
+	volume = {3},
+	url = {http://accelconf.web.cern.ch/AccelConf/e06/PAPERS/MOPCH077.PDF},
+	number = {1},
+	urldate = {2016-10-27},
+	journal = {Proc. EPAC},
+	author = {Nolden, Fritz and Beckert, K. and Beller, P. and Blell, U. and Dimopoulou, C. and Dolinskii, A. and Laier, U. and Moritz, G. and Muehle, C. and Nesmiyan, I. and {others}},
+	year = {2006},
+	pages = {5},
+	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\X6V6DSVX\\Nolden et al. - 2006 - The Collector Ring CR of the FAIR project.pdf:application/pdf}
+}
+
+@article{lestinsky_cryring_2012,
+	title = {{CRYRING}@ {ESR}: {A} study group report},
+	shorttitle = {{CRYRING}@ {ESR}},
+	journal = {GSI and FAIR Report},
+	author = {Lestinsky, M. and {others}},
+	year = {2012}
 }
 
 @article{beck_new_2012,
@@ -293,6 +376,24 @@
 	title = {Calculating {Optical} {Fiber} {Latency}},
 	url = {http://www.m2optics.com/blog/bid/70587/Calculating-Optical-Fiber-Latency},
 	year = {2012}
+}
+
+@inproceedings{krause_re-engineering_2001,
+	title = {Re-engineering of the {GSI} control system},
+	url = {http://arxiv.org/abs/physics/0111060},
+	urldate = {2016-10-27},
+	author = {Krause, U. and Schaa, Volker},
+	year = {2001},
+	file = {[PDF] arxiv.org:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\7ZPPGI3F\\Krause und Schaa - 2001 - Re-engineering of the GSI control system.pdf:application/pdf;Snapshot:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\P2BJP4SV\\0111060.html:text/html}
+}
+
+@misc{kainberger_pzs_2003,
+	title = {{PZS} - {SIS}/{ESR}-{Pulszentrale}},
+	url = {https://www-acc.gsi.de/data/documentation/eq-models/pzs/gm-pzs.pdf},
+	urldate = {2016-10-27},
+	author = {Kainberger, P},
+	year = {2003},
+	file = {PZS - SIS/ESR-Pulszentrale - Google-Suche:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\XEZE6DX3\\www.google.de.html:text/html}
 }
 
 @inproceedings{tamura_synchronization_2006,
@@ -406,6 +507,11 @@
 	year = {2011}
 }
 
+@misc{_lhc_????,
+	title = {{LHC} glossary definition},
+	url = {http://www.lhcportal.com/Portal/Info/LHCGlossaryDef.pdf}
+}
+
 @article{bohne_status_1986,
 	title = {Status report on the {SIS}/{ESR} project at {GSI}},
 	url = {http://inspirehep.net/record/242805/files/HEACC86_I_206-210.pdf},
@@ -481,7 +587,7 @@
 	file = {[PDF] cern.ch:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\FZKGKHD7\\Steck et al. - 2008 - Advanced Design of the FAIR Storage Ring Complex.pdf:application/pdf}
 }
 
-@inproceedings{toelle_hesr_2007,
+@inproceedings{toelle_hesr_2007-1,
 	title = {{HESR} at {FAIR}: {Status} of technical planning},
 	shorttitle = {{HESR} at {FAIR}},
 	url = {http://epaper.kek.jp/p07/PAPERS/TUPAN024.PDF},
