--- a/main.tex
+++ b/main.tex
@@ -513,7 +513,7 @@ description={Magnetic field},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:slip_fac}{
-name=$\eta(t)$,
+name=$\eta$,
 description={Phase-slip factor},
 sort=symbollambda, type=symbolslist
 }
