--- a/reference.bib
+++ b/reference.bib
@@ -512,6 +512,16 @@
 	url = {http://www.lhcportal.com/Portal/Info/LHCGlossaryDef.pdf}
 }
 
+@misc{steinhagen_tune_2008,
+	title = {Tune and chromaticity diagnostics},
+	url = {https://www.researchgate.net/profile/Ralph_Steinhagen/publication/261961271_Tune_and_Chromaticity_Diagnostics/links/02e7e5360c028adac1000000.pdf},
+	urldate = {2016-11-07},
+	publisher = {CERN},
+	author = {Steinhagen, Ralph J.},
+	year = {2008},
+	file = {[PDF] researchgate.net:C\:\\Users\\Gilgil\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\y25mftub.default\\zotero\\storage\\6FJ6WWZ8\\Steinhagen und others - 2008 - Tune and chromaticity diagnostics.pdf:application/pdf}
+}
+
 @article{bohne_status_1986,
 	title = {Status report on the {SIS}/{ESR} project at {GSI}},
 	url = {http://inspirehep.net/record/242805/files/HEACC86_I_206-210.pdf},
