theoretical:circumference integer/no integer

--- a/main.tex
+++ b/main.tex
@@ -529,7 +529,7 @@ sort=symbollambda, type=symbolslist
 }
 
 \newglossaryentry{symb:bending_rad}{
-name=$\rho_0$,
+name=$\rho$,
 description={Bending radius of a particle immersed in a magnetic field B},
 sort=symbollambda, type=symbolslist
 }
